--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-responsive": "^10.0.0",
     "react-slick": "^0.30.2",
     "react-type-animation": "^3.2.0",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.4.0"
   },
